Bug 649790 - [Release Channel] Unlabelled download buttons visible on Firefox/Future Releases download page when multiple locales offered
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@92243 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/channel.css
+++ b/style/covehead/channel.css
@@ -92,7 +92,7 @@
 #channel .channel#download_beta a.download-link,
 #channel .channel#download_firefox a.download-link,
 #channel .channel#download_mobile_beta a.download-link {
-    margin: 0;
+    margin: 0 0 5px;
     height: auto;
 }
 
@@ -113,7 +113,7 @@
     background: url("/img/covehead/channel/download-arrow.png") no-repeat 10px 50%;
     padding: 10px 10px 12px 38px;
     margin: 0;
-    height: 40px;
+    height: 50px;
     font-size: 15px;
     line-height: 1.1;
 }
@@ -243,6 +243,10 @@
 .channel small {
     font-size: 10px;
     margin-left: 28px;
+}
+
+#channel .download-info {
+    color: white;
 }
 
 /* }}} */
